modifications for index.html and style.css

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ margin: 0px;
 html, body { 
     height: 100%;
 }
+
 #navBar {
     position: fixed;
 
@@ -16,14 +17,6 @@ html, body {
     padding: 10px;
 }
 
-#navBar a {
-    display: block;
-    text-decoration: none;
-    width: 10%;
-    padding: 10px;
-    color: white;
-}
-
 ul li {
     list-style-type: none;
     display:block;
@@ -31,4 +24,25 @@ ul li {
 .contents h1 {
     text-align: center;
     
+}
+
+#navBar {
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: white;
 }
